fix: card overlay text align issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,16 @@
   text-decoration: none;
   margin-right: 20px;
   font-weight: bold;
-  font-size : 20px;
+  font-size : 24px;
+  padding-left: 10px;
 }
 
 .nav-item {
   color:white;
   text-decoration: none;
   margin-right: 20px;
-  font-size : 20px;
+  font-size : 24px;
+  padding-left: 10px;
 }
 
 .banner {
@@ -92,6 +94,10 @@
   padding-bottom: 30px;
 }
 
+.SlideContainer {
+  display: flex;
+}
+
 .card {
   width:350px;
   height:200px;
@@ -143,10 +149,14 @@
   width: 100%;
   height: 100%;
   color:white;
+  padding-left: 40px;
+  padding-top: 20px;
+
 }
 
 .card:hover .overlay {
   opacity: 1;
+ 
 }
 
 .Btn-container{
@@ -251,6 +261,7 @@
 .detailContainer {
   justify-content: center;
   display: flex;
+  padding-bottom: 30px;
 }
 
 .movie-image {
@@ -382,7 +393,7 @@
 
 .reviewButtons {
   padding-top: 100px;
-  padding-bottom: 15px;
+  padding-bottom: 30px;
 }
 
 .review-boxBorder {
